//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  login String [unique, not null]
  password String [not null]
  role Role [not null]
}

Table Employee {
  id Int [pk, increment]
  Reception Reception [not null]
  Schedule Schedule [not null]
  ReceptionRecord ReceptionRecord [not null]
  fullName String [unique, not null]
  role Role [not null]
}

Table Client {
  id Int [pk, increment]
  pet Pet [not null]
  receptionRecord ReceptionRecord [not null]
  fullName String [not null]
  telephoneNumber String [not null]
  address String
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (fullName, telephoneNumber) [unique]
  }
}

Table Pet {
  id Int [pk, increment]
  client Client [not null]
  clientId Int [not null]
  AnalyzesResearch AnalyzesResearch [not null]
  Reception Reception [not null]
  alias String [not null]
  kind String
  gender Boolean
  breed String
  DOB DateTime
  nutrition String
  color String
  castration Boolean
  notes String
  diagnosis String
  weight Float
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (alias, kind, gender, clientId) [unique]
  }
}

Table AnalyzesResearch {
  id Int [pk, increment]
  TypeAnalyzesResearch TypeAnalyzesResearch [not null]
  typeId Int [not null]
  pet Pet [not null]
  petId Int [not null]
  data String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table TypeAnalyzesResearch {
  id Int [pk, increment]
  typeName String [unique, not null]
  AnalyzesResearch AnalyzesResearch [not null]
}

Table Reception {
  id Int [pk, increment]
  pet Pet [not null]
  petId Int [not null]
  Employee Employee [not null]
  employeeId Int [not null]
  purpose ReceptionPurpose [not null]
  purposeId Int [not null]
  goodsList GoodsList [not null]
  serviceList ServiceList [not null]
  clinicalSigns String
  anamnesis String
  diagnosis String
  assignment String
  cost Float
  discount Int
  createdAt DateTime [default: `now()`, not null]
}

Table ReceptionPurpose {
  id Int [pk, increment]
  reception Reception [not null]
  receptionRecord ReceptionRecord [not null]
  purposeName String [not null]
}

Table Goods {
  id Int [pk, increment]
  GoodsCategory GoodsCategory [not null]
  categoryId Int [not null]
  goodsList GoodsList [not null]
  name String [not null]
  measure String
  quantity Float
  price Float
  department Department

  indexes {
    (categoryId, name, measure) [unique]
  }
}

Table GoodsCategory {
  id Int [pk, increment]
  goods Goods [not null]
  categoryName String [not null]
}

Table GoodsList {
  Reception Reception [not null]
  receptionId Int [not null]
  Goods Goods [not null]
  goodsId Int [not null]
  quantity Float [not null]

  indexes {
    (receptionId, goodsId) [pk]
  }
}

Table Service {
  id Int [pk, increment]
  ServiceType ServiceType [not null]
  typeId Int [not null]
  serviceList ServiceList [not null]
  name String [not null]
  price Float

  indexes {
    (name, typeId) [unique]
  }
}

Table ServiceType {
  id Int [pk, increment]
  service Service [not null]
  typeName String [not null]
}

Table ServiceList {
  Reception Reception [not null]
  receptionId Int [not null]
  Service Service [not null]
  serviceId Int [not null]
  quantity Float [not null]

  indexes {
    (receptionId, serviceId) [pk]
  }
}

Table Schedule {
  id Int [pk, increment]
  Employee Employee [not null]
  employeeId Int [not null]
  date DateTime [not null]

  indexes {
    (date, employeeId) [unique]
  }
}

Table ReceptionRecord {
  id Int [pk, increment]
  Employee Employee
  employeeId Int
  ReceptionPurpose ReceptionPurpose
  receptionPurposeId Int
  Client Client
  clientId Int
  dateTimeStart DateTime [not null]
  dateTimeEnd DateTime [not null]
  kindOfAnimal String
  department Department
}

Enum Role {
  ADMIN
  DOCTOR
  MANAGER
}

Enum Department {
  Angarsk
  Usolye
}

Ref: Pet.clientId > Client.id [delete: Cascade]

Ref: AnalyzesResearch.typeId > TypeAnalyzesResearch.id

Ref: AnalyzesResearch.petId > Pet.id [delete: Cascade]

Ref: Reception.petId > Pet.id [delete: Cascade]

Ref: Reception.employeeId > Employee.id

Ref: Reception.purposeId > ReceptionPurpose.id

Ref: Goods.categoryId > GoodsCategory.id [delete: Cascade]

Ref: GoodsList.receptionId > Reception.id [delete: Cascade]

Ref: GoodsList.goodsId > Goods.id [delete: Cascade]

Ref: Service.typeId > ServiceType.id [delete: Cascade]

Ref: ServiceList.receptionId > Reception.id [delete: Cascade]

Ref: ServiceList.serviceId > Service.id [delete: Cascade]

Ref: Schedule.employeeId > Employee.id [delete: Cascade]

Ref: ReceptionRecord.employeeId > Employee.id [delete: Cascade]

Ref: ReceptionRecord.receptionPurposeId > ReceptionPurpose.id [delete: Cascade]

Ref: ReceptionRecord.clientId > Client.id [delete: Cascade]